--- a/infra/package.json
+++ b/infra/package.json
@@ -29,6 +29,7 @@
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.7",
     "source-map-support": "^0.5.21"
   }
 }
