--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: "ocr-repo"
         run: |
+          cd ./infra
           docker build . --tag ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
           docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
 
