shに環境置き換えテスト

--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,5 +1,5 @@
-# ✅ AWS Lambda の Python 3.8 公式イメージを使用
-FROM public.ecr.aws/lambda/python:3.8
+# ✅ Amazon Linux 2 をベースにする
+FROM amazonlinux:2
 
 # 必要なツールをインストール
 RUN yum install -y gcc gcc-c++ make automake autoconf libtool \
@@ -8,7 +8,7 @@ RUN yum install -y gcc gcc-c++ make automake autoconf libtool \
     cairo cairo-devel \
     icu libicu libicu-devel \
     zlib zlib-devel \
-    wget curl unzip tar
+    wget curl unzip tar aws-cli
 
 # ✅ EPEL リポジトリを有効化
 RUN amazon-linux-extras enable epel
@@ -25,13 +25,11 @@ RUN curl -L -o /usr/share/tessdata/jpn.traineddata \
 # ✅ Lambda の作業ディレクトリ
 WORKDIR /var/task
 
-# ✅ Python パッケージをインストール
-COPY requirements.txt .
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# ✅ Lambda ハンドラーのコピー（Bash スクリプト）
+COPY lambda/handler.sh .
 
-# ✅ Lambda ハンドラーのコピー
-COPY lambda/app.py .
+# ✅ 実行権限を付与
+RUN chmod +x handler.sh
 
-# ✅ AWS Lambda のエントリーポイント
-CMD ["app.lambda_handler"]
+# ✅ AWS Lambda のエントリーポイントを Bash に変更
+CMD ["/bin/sh", "/var/task/handler.sh"]
