--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,46 @@
-name: ECR Deploy
-on:
-  push:
-    branches:
-      - main
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main # リポジトリをチェックアウト
+# name: ECR Deploy
+# on:
+#   push:
+#     branches:
+#       - main
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@main # リポジトリをチェックアウト
 
-      # AWS認証
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+#       # AWS認証
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Prepare .env file
-      #   run: |
-      #     aws ssm get-parameter --name /github/*** --output json | jq -r .Parameter.Value > .env
-      #     cut -d= -f2 .env  | xargs -I arg echo ::add-mask::arg
-      #     cat .env >> "$GITHUB_ENV"
+#       # - name: Prepare .env file
+#       #   run: |
+#       #     aws ssm get-parameter --name /github/*** --output json | jq -r .Parameter.Value > .env
+#       #     cut -d= -f2 .env  | xargs -I arg echo ::add-mask::arg
+#       #     cat .env >> "$GITHUB_ENV"
 
-      # ECR ログイン
-      - uses: aws-actions/amazon-ecr-login@v1
-        id: login-ecr
+#       # ECR ログイン
+#       - uses: aws-actions/amazon-ecr-login@v1
+#         id: login-ecr
 
-      # Docker イメージを build・push する
-      - name: build and push docker image to ecr
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: "ocr-repo"
-        run: |
-          cd ./infra
-          docker build . --tag ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
-          docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
+#       # Docker イメージを build・push する
+#       - name: build and push docker image to ecr
+#         env:
+#           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#           REPOSITORY: "ocr-repo"
+#         run: |
+#           cd ./infra
+#           docker build . --tag ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
+#           docker push ${{ env.REGISTRY }}/${{ env.REPOSITORY }}
 
-      # Lambda更新
-      - name: update lambda function
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: "ocr-repo"
-        run: aws lambda update-function-code --function-name OCRImageFunctions --image-uri ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:latest
+#       # Lambda更新
+#       - name: update lambda function
+#         env:
+#           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#           REPOSITORY: "ocr-repo"
+#         run: aws lambda update-function-code --function-name OCRImageFunctions --image-uri ${{ env.REGISTRY }}/${{ env.REPOSITORY }}:latest
